# goit-python-web-hw-08

./: consumer.py  main.py  models.py  producer.py  pyproject.toml  seed.py
