[tool.poetry]
name = "hw08"
version = "0.1.0"
description = ""
authors = ["MatsiukRoman <r.matsuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = {extras = ["srv"], version = "^4.8.0"}
mongoengine = "^0.28.2"
configparser = "^7.0.0"
redis = "^5.0.8"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^26.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
